--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <div class="navbar">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="35px"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
                     <input type="text" class="form-input">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="35px"><title>bell-ring</title><path d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg>
-                    <img src="./assets/profile.png"  alt="profile" class="navbar-avtr">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="25px"><title>bell-ring</title><path d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg>
+                    <img src="./assets/profile.png"   width="40px"rel="profile">
                     <h4>Shadrack Mutethia</h4>
                 </div>
                 <div class="welcome">
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                             <div class="card">
-                                <h6>Super Cool Projects</h6>
+                                <h6>Less Cool Projects</h6>
                                 <p>Lorem ipsum dolor sit amet <br>
                                     consectetur adipisicing elit <br>
                                     Officia natus autem provident</p>
@@ -106,7 +106,7 @@
                                 </div>
                             </div>
                             <div class="card">
-                                <h6>Super Cool Projects</h6>
+                                <h6>Impossible App</h6>
                                 <p>Lorem ipsum dolor sit amet <br>
                                     consectetur adipisicing elit <br>
                                     Officia natus autem provident</p>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="cards-right">
                             <div class="card">
-                                <h6>Super Cool Projects</h6>
+                                <h6>Easy Peasy App</h6>
                                 <p>Lorem ipsum dolor sit amet <br>
                                     consectetur adipisicing elit <br>
                                     Officia natus autem provident</p>
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                             <div class="card">
-                                <h6>Super Cool Projects</h6>
+                                <h6>Ad Blocker</h6>
                                 <p>Lorem ipsum dolor sit amet <br>
                                     consectetur adipisicing elit <br>
                                     Officia natus autem provident</p>
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                             <div class="card">
-                                <h6>Super Cool Projects</h6>
+                                <h6>Money Maker</h6>
                                 <p>Lorem ipsum dolor sit amet <br>
                                     consectetur adipisicing elit <br>
                                     Officia natus autem provident</p>
@@ -175,37 +175,38 @@
                         </div>
                     </div>
                     <div class="ann-trend">
-                        <h4>Trending</h4>
-                        <div class="trend-card">
-                            <div class="trend-image-text">
-                                <img src="./assets/gamer.png"  width="30px"alt="avatar">
-                                <div class="trend-text">
+                        <div class="trending">
+                            <h4>Trending</h4>
+                            <div class="trend-card">
+                                <div class="trend-image-text">
+                                    <img src="./assets/gamer.png"  width="25px"alt="avatar">
+                                    <div class="trend-text">
                                     <h6>@tegan</h6>
                                     <p>World Peace Builder</p>
                                 </div>
                             </div>
                             <div class="trend-image-text">
-                                <img src="./assets/hacker.png" width="30px"alt="avatar">
+                                <img src="./assets/hacker.png" width="28px"alt="avatar">
                                 <div class="trend-text">
                                     <h6>@morgan</h6>
                                     <p>Super Cool Project</p>
                                 </div>
                             </div>
                             <div class="trend-image-text">
-                                <img src="./assets/woman.png" width="30px"alt="avatar">
+                                <img src="./assets/woman.png" width="28px"alt="avatar">
                                 <div class="trend-text">
                                         <h6>@Kendall</h6>
                                         <p>Life Changing app</p>                                
                                 </div>
                             </div>
                             <div class="trend-image-text">
-                                <img src="./assets/woman.png" width="30px"alt="avatar">
+                                <img src="./assets/hacker.png" width="28px"alt="avatar">
                                 <div class="trend-text">
                                         <h6>@Kendall</h6>
-                                        <p>Life Changing app</p>                                
+                                        <p>No Traffic Maker</p>                                
                                 </div>
                             </div>
-                        </div>
+                        </div> 
                     </div>
                 </div>
             </div>
